--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="new_name">New name</string>
     <string name="current_name">Current name</string>
     <string name="rename">Rename</string>
+    <string name="drop_here">DROP HERE</string>
+    <string name="decline">DECLINE</string>
+    <string name="folder_options">Folder options</string>
+    <string name="file_options">File options</string>
 </resources>
