Also copy will work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="decline">DECLINE</string>
     <string name="folder_options">Folder options</string>
     <string name="file_options">File options</string>
+    <string name="moving_file">Moving: %1$s</string>
+    <string name="copy_file">Copying: %1$s</string>
 </resources>
